// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Checkbox"
>
  <input
    aria-label="checkbox"
    class="ControlledInput"
    data-test-id="ctf-ui-checkbox"
    type="checkbox"
    value=""
  />
  <label
    class="Checkbox__ghost"
  />
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="my-extra-class Checkbox"
>
  <input
    aria-label="checkbox"
    class="ControlledInput"
    data-test-id="ctf-ui-checkbox"
    type="checkbox"
    value=""
  />
  <label
    class="Checkbox__ghost"
  />
</div>
`;
